--- a/templates/message/success.html
+++ b/templates/message/success.html
@@ -1,6 +1,19 @@
 {% extends "base/diary_base.html" %}
+{% load static %}
 {% block body %}
 
-    <h1>メッセージを送信しました！</h1>
+<div class="card">
+    <h2 class="card-title">メッセージを送信しました</h2>
+
+    <p class="card-text">
+        メッセージは正常に送信されました。
+    </p>
+
+    <div class="card-actions">
+        <a href="/" class="btn primary">
+            トップへ戻る
+        </a>
+    </div>
+</div>
 
 {% endblock %}
