--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -8,7 +8,7 @@
     <h2 class="page-title">新規登録</h2>
     <p class="page-description">
         アカウントを作成すると、<br>
-        日記の作成・動画の共有ができるようになります。
+        日記の作成・動画の共有・登録ユーザー同時でメッセージのやり取りができるようになります。
     </p>
 </div>
 
