--- a/templates/base/diary_base.html
+++ b/templates/base/diary_base.html
@@ -5,6 +5,7 @@
 
 <head>
     <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'diary/css/base.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/blog_form.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/blog.css' %}">
