--- a/templates/blog/child_comments.html
+++ b/templates/blog/child_comments.html
@@ -42,7 +42,7 @@
                 ＞＞＞ <strong>{{ reply.reply_to }}</strong>
                 {% endif %}
                 <br>
-                {{ reply.body|linebreaksbr }} }}
+                {{ reply.body|linebreaksbr }}
             </p>
 
             {% if reply.image %}
@@ -95,7 +95,7 @@
 <p>コメントはまだありません。</p>
 {% endfor %}
 
-<script src="{% static 'blog/blog.js' %}"></script>
+<script src="{% static 'blog/js/blog.js' %}"></script>
 
 <script async src="https://www.tiktok.com/embed.js"></script>
 <script async src="//www.instagram.com/embed.js"></script>
