--- a/static/diary/css/base.css
+++ b/static/diary/css/base.css
@@ -294,3 +294,23 @@ section h3 {
     color: #888;
     font-size: 0.9rem;
 }
+
+
+
+
+
+
+
+
+
+.profile-image-area {
+    text-align: center;
+    margin-bottom: 12px;
+}
+
+.profile-image {
+    width: 96px;
+    height: 96px;
+    border-radius: 50%;
+    object-fit: cover;
+}
